Fix Firefox overflow bug caused by screen reader text

--- a/assets/sass/patterns.scss
+++ b/assets/sass/patterns.scss
@@ -24,6 +24,7 @@ img {
 .screen-reader-text {
 	position: absolute;
 	top: -1000em;
+	left: 0;
 }
 .screen-reader-text:focus {
 	left: 6px;
